# algs-structs-python

./: .flake8  README.md  pyproject.toml
src/: tree.py
tests/: test_tree.py
