[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py311']


[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
skip_gitignore = true
src_paths = ["src"]
